# cdumay_job

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: dice_game.rs
src/: lib.rs  macros.rs  messages.rs  operation.rs  result.rs  status.rs  task.rs
src/result/: builder.rs  mod.rs  result.rs
tests/: macros.rs  result.rs  result_builder.rs
