[package]
name = "cdumay_job"
version = "0.1.1"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/cdumay_job"
repository = "https://github.com/cdumay/rust-cdumay_job"
homepage =  "https://github.com/cdumay/rust-cdumay_job"
description = "A library to follow job execution using validation and checks steps."
keywords = ["Error", "serde"]
categories = ["caching", "data-structures", "encoding"]

[badges]
gitlab = { repository = "cdumay/rust-cdumay_job" }
travis-ci = { repository = "cdumay/rust-cdumay_job" }
maintenance = { status = "as-is" }

[dependencies]
cdumay_error = { git = "https://github.com/cdumay/rust-cdumay_errors" }
cdumay_result = { git = "https://github.com/cdumay/rust-cdumay_result" }
futures = "0.1"
hostname = "0.1"
log = "0.4"
rand = "0.6"
serde = "1.0"
serde-value = "0.6"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["v4", "serde"] }
