[package]
name = "cdumay_job"
version = "1.0.0"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
categories = ["caching", "data-structures", "encoding"]
description = "A library to follow job execution using validation and checks steps."
documentation = "https://docs.rs/cdumay_job"
edition = "2024"
homepage = "https://github.com/cdumay/cdumay_job"
keywords = ["Job", "serde"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_job"

[dependencies]
cdumay_error = "1.0"
cdumay_result = "1.0"
log = "0.4"
serde =  "1.0"
serde-value = "0.7"
serde_json = "1.0"
uuid = { version = "1.16", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.11"
hostname = "0.4"